// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate > generates a path-param command with a scalar JSON body 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setOfficial
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetOfficialCommand = defineCommand<OpenApiClientServices>({
  name: "set-official",
  description: "Mark a bot as official.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it." })),
    handle: S.String(),
    official: S.Boolean(),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v" })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-official",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.handle,
      },
      body: {
        "official": params.official,
      },
    });
  },
});
",
    "path": "bots/set-official.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetOfficialCommand } from "./bots/set-official.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetOfficialCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > generates a scalar query command 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: listBots
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsListCommand = defineCommand<OpenApiClientServices>({
  name: "list",
  description: "List bots.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it." })),
    limit: S.Optional(S.Number({ default: 50, jsonType: "integer" })),
    owner: S.Optional(S.String()),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v" })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots",
      method: "GET",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      query: {
        "limit": params.limit,
        "owner": params.owner,
      },
    });
  },
});
",
    "path": "bots/list.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsListCommand } from "./bots/list.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsListCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > generates an enum JSON body command 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setImageComprehension
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetImageComprehensionCommand = defineCommand<OpenApiClientServices>({
  name: "set-image-comprehension",
  description: "Set image comprehension mode.",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it." })),
    handle: S.String(),
    mode: S.Enum(["off","auto","forced"] as const),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v" })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-image-comprehension",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.handle,
      },
      body: {
        "mode": params.mode,
      },
    });
  },
});
",
    "path": "bots/set-image-comprehension.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetImageComprehensionCommand } from "./bots/set-image-comprehension.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetImageComprehensionCommand],
});
",
    "path": "index.ts",
  },
]
`;

exports[`generate > treats required body fields as optional when the request body is optional 1`] = `
[
  {
    "contents": "/**
 * Generated by @poe-code/cmdkit-openapi.
 * spec-sha: spec-sha-123
 * operation-id: setDescription
 */
import { defineCommand, S } from "@poe-code/cmdkit";
import { requestJson, type OpenApiClientServices } from "@poe-code/cmdkit-openapi";

export const botsSetDescriptionCommand = defineCommand<OpenApiClientServices>({
  name: "set-description",
  scope: ["cli", "mcp", "sdk"] as const,
  params: S.Object({
    description: S.Optional(S.String()),
    dryRun: S.Optional(S.Boolean({ description: "Print the HTTP request and exit without sending it." })),
    handle: S.String(),
    verbose: S.Optional(S.Boolean({ description: "Log the request line to stderr.", short: "v" })),
  }),
  handler: async ({ params, baseUrl, tokenSource, fetch }) => {
    return requestJson({
      baseUrl,
      path: "/bots/{botHandle}/actions/set-description",
      method: "POST",
      tokenSource,
      fetch,
      dryRun: params.dryRun,
      verbose: params.verbose,
      pathParams: {
        "botHandle": params.handle,
      },
      body: {
        "description": params.description,
      },
    });
  },
});
",
    "path": "bots/set-description.ts",
  },
  {
    "contents": "import { defineGroup } from "@poe-code/cmdkit";
import { botsSetDescriptionCommand } from "./bots/set-description.js";

export const bots = defineGroup({
  name: "bots",
  children: [botsSetDescriptionCommand],
});
",
    "path": "index.ts",
  },
]
`;
